# rust-buildkit

./: .dockerignore  .gitignore  Cargo.toml  README.md
.ci/: common.sh  frontend-integration-tests.sh  test-all-examples.sh  test-download-example.sh  test-reverse-example.sh  test-ssh-mount-example.sh
.ci/examples/: reverse.dockerfile  reverse.input  reverse.output  reverse.sh
.github/workflows/: docker.yml  rust-ci.yml
buildkit-frontend/: CHANGELOG.md  Cargo.toml  README.md
buildkit-frontend/examples/: download.dockerfile  download.input  download.output  download.rs  reverse.dockerfile  reverse.input  reverse.output  reverse.rs  ssh-mount.dockerfile  ssh-mount.input  ssh-mount.output  ssh-mount.rs
buildkit-frontend/src/: bridge.rs  lib.rs  options.rs  stdio.rs
buildkit-frontend/src/options/: common.rs  default.rs  deserializer.rs  mod.rs
buildkit-llb/: CHANGELOG.md  Cargo.toml  README.md
buildkit-proto/: CHANGELOG.md  Cargo.toml  README.md  build.rs
