[package]
name = "buildkit-frontend"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
failure = "0.1"
libc = "0.2"
log = "0.4"
mio = "0.6"
serde_json = "1.0"
tokio = "0.1"

tower-grpc = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.futures-preview]
version = "0.3.0-alpha.18"
features = ["compat"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.buildkit-proto]
version = "0.1"
path = "../buildkit-proto"

[dependencies.buildkit-llb]
version = "0.1"
path = "../buildkit-llb"

[dev-dependencies]
pretty_assertions = "0.6"
