[package]
name = "buildkit-frontend"
version = "0.3.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

description = "Foundation for BuildKit frontends implemented in Rust"
documentation = "https://docs.rs/buildkit-frontend"
repository = "https://github.com/denzp/rust-buildkit"
readme = "README.md"
keywords = ["buildkit", "docker", "bridge"]
categories = ["development-tools::build-utils", "api-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.5"
either = "1.5"
failure = "0.1"
futures = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.6"
pin-project = "0.4"
serde_json = "1.0"
tonic = "0.1"
tower = "0.3"

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["io-std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.buildkit-proto]
version = "0.2"
path = "../buildkit-proto"

[dependencies.buildkit-llb]
version = "0.2"
path = "../buildkit-llb"

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.6"
pretty_assertions = "0.6"
regex = "1.3"
url = "2.1"

[dev-dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core", "rt-threaded"]
